tests/snapshots/run_wpt_conformance__onnx_convTranspose2d_float32_4D_input_and_filter_tensors_options_strides.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "conv_transpose2d.https.any.js",
    "convTranspose2d float32 4D input and filter tensors options.strides",
    "onnx",
    "PASS",
)
